--- a/exercicios/ex024/paginasextras/pag001.html
+++ b/exercicios/ex024/paginasextras/pag001.html
@@ -8,8 +8,15 @@
     <style>
          body {
             font-family: Arial, Helvetica, sans-serif;
+            background-color: lightgray;
+        }
+
+        h1 {
+        text-align: center;
         }
         table {
+            margin: auto;
+            display: block;
             border-collapse: collapse;
         }
 
@@ -20,12 +27,12 @@
         }
 
         th, td {
-            border: 1px solid gray;
+            border: 1px solid black;
             padding: 10px;
         }
 
         tr:nth-child(even) {
-            background-color: lightgray;
+            background-color: gray;
         }
 
         div#container {
@@ -34,11 +41,7 @@
     </style>
 </head>
 <body>
-    <h1>Tabelas em telas pequenas</h1>
-    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eius non dolore dignissimos magnam suscipit repudiandae a deleniti, eveniet quia voluptates minus, iusto error? Aut libero ducimus quis suscipit corporis illo!
-    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem natus explicabo consequatur quisquam dolore culpa ratione qui possimus, numquam labore, soluta impedit aliquid consequuntur, accusantium atque aut officiis eos quas?
-    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Soluta praesentium ipsam officia pariatur tempora quos sit mollitia labore? Debitis, sit quae quo quisquam officia dolore a tempora odit consectetur ea.
-    </p>
+    <h1>Vendas de produtos por mês</h1>
     <div id="container">
         <table>
             <caption>Tabelas responsivas</caption>
