--- a/exercicios/ex026/mq005/index.html
+++ b/exercicios/ex026/mq005/index.html
@@ -7,8 +7,9 @@
     <title>Media Query</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="stylesheet" href="estilos/media-query.css">
 </head>
-<body>
+<body onresize="mudouTamanho()">
     <header>
         <h1>Meu Site</h1>
         <i id="burger" class="material-symbols-outlined" onclick="clickMenu()">menu</i>
@@ -41,12 +42,22 @@
         </article>
     </main>
     <Script>
-        function clickMenu() {
-            if (itens.style.display == 'block')
+        function mudouTamanho() {
+        if (window.innerWidth >= 761) {
+             itens.style.display = 'block'
+        } else {
             itens.style.display = 'none'
-            else {
-                itens.style.display = 'block'
-            }
+    }
+    }
+
+        function clickMenu() {
+            
+        if (itens.style.display == 'block') {
+            itens.style.display = 'none'
+        
+        } else {
+            itens.style.display = 'block'
+         }
         }
     </Script>
 </body>
